[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unopose"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "MichaelGao", email = "contact@unomove.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/MichaelGao/unopose#readme"
Issues = "https://github.com/MichaelGao/unopose/issues"
Source = "https://github.com/MichaelGao/unopose"

[tool.hatch.version]
path = "src/unopose/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/unopose tests}"

[tool.coverage.run]
source_pkgs = ["unopose", "tests"]
branch = true
parallel = true
omit = [
  "src/unopose/__about__.py",
]

[tool.coverage.paths]
unopose = ["src/unopose", "*/unopose/src/unopose"]
tests = ["tests", "*/unopose/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
